add users module / auth via jwt for database users

--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -2,3 +2,4 @@ NotNull.customer.lastName=Imie klienta jest wymagane
 NotNull.customer.firstName=Nazwisko klienta jest wymagane
 agency.exceptions.BadCredentialsException=Niepoprawny login lub hasło
 agency.exceptions.AccessDaniedException=Odmowa dostępu
+NotNull.user.email=Musisz podać adress email
