--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,5 +1,11 @@
-NotNull.customer.lastName=Imie klienta jest wymagane
-NotNull.customer.firstName=Nazwisko klienta jest wymagane
 agency.exceptions.BadCredentialsException=Niepoprawny login lub hasło
 agency.exceptions.AccessDaniedException=Odmowa dostępu
+
 NotNull.user.email=Musisz podać adress email
+NotNull.user.username=Musisz podać nickname użytkownika
+
+NotNull.customer.name=Musisz podać imie Klienta
+NotNull.customer.surname=Musisz podać nazwisko Klienta
+NotNull.customer.email=Musisz podać email Klienta
+Email.customer.email=Podany email jest nieprawidłowy
+Unique.customer.email=Ten adress email jest już przypisany do innego klienta.
