finish base functionality - dashboard remaning

--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -9,3 +9,8 @@ NotNull.customer.surname=Musisz podać nazwisko Klienta
 NotNull.customer.email=Musisz podać email Klienta
 Email.customer.email=Podany email jest nieprawidłowy
 Unique.customer.email=Ten adress email jest już przypisany do innego klienta.
+
+Delete.policy.closed=Nie możesz usunąc potwierdzonej Polisy.
+
+NotNull.policy.name=Musisz podać nazwę Polisy
+NotNull.policy.subject=Musisz podać informacje przedmiotu Polisy
