add missing messages / fix for jwt user

--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -14,3 +14,5 @@ Delete.policy.closed=Nie możesz usunąc potwierdzonej Polisy.
 
 NotNull.policy.name=Musisz podać nazwę Polisy
 NotNull.policy.subject=Musisz podać informacje przedmiotu Polisy
+
+Past.customer.bornDate=Niepoprawna data urodzenia
